Movies Profile Screen finished...

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,12 +22,12 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNvgViewHome"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
         android:background="@color/colorPrimary"
         app:itemBackground="@android:color/transparent"
         app:itemIconSize="30dp"
         app:itemIconTint="@drawable/bottom_navigation_icon_color"
-        app:itemPaddingBottom="@dimen/margin_medium_3"
+        app:itemPaddingBottom="@dimen/margin_10dp"
         app:itemRippleColor="@color/colorAccent"
         app:itemTextAppearanceInactive="@color/colorPrimaryLight"
         app:itemTextColor="@color/colorAccent"
