--- a/app/src/main/res/layout/fragment_movies_ticket_checkout.xml
+++ b/app/src/main/res/layout/fragment_movies_ticket_checkout.xml
@@ -475,6 +475,56 @@
             android:layout_marginTop="@dimen/margin_36dp"
             app:srcCompat="@drawable/continue_button" />
 
+        <RelativeLayout
+            android:id="@+id/rlTicketCancellationMoviesCheckout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rlCheckoutDetailsMoviesTicketCheckout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="@dimen/margin_28dp"
+            android:visibility="gone"
+            android:layout_marginTop="@dimen/margin_36dp"
+            android:layout_marginEnd="@dimen/margin_28dp"
+            android:paddingBottom="@dimen/margin_50dp"
+            android:layout_marginBottom="@dimen/margin_45dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:orientation="vertical">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvRefundAmountLabelMoviesCancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/inter_bold"
+                    android:gravity="center_horizontal"
+                    android:text="@string/lbl_refund_amount"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_regular_2x" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvTicketPriceMoviesCancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/inter_bold"
+                    android:gravity="center_horizontal"
+                    android:text="17000KS"
+                    android:textColor="@color/colorRefundAmount"
+                    android:textSize="@dimen/text_regular_3x" />
+
+            </LinearLayout>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/btnCancelButtonMoviesCancel"
+                android:layout_width="@dimen/width_buy_button"
+                android:layout_height="@dimen/height_buy_button"
+                android:layout_alignParentEnd="true"
+                app:srcCompat="@drawable/button_cancel_booking" />
+
+        </RelativeLayout>
+
     </RelativeLayout>
 
 </ScrollView>
