--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,5 @@
     <color name="colorCinemaStuff">#AAAAAA</color>
     <color name="colorGrey">#AAAAAA</color>
     <color name="colorSeatType">#444444</color>
+    <color name="colorRefundAmount">#FF2E00</color>
 </resources>
