--- a/app/src/main/res/layout/view_holder_movies_cinema_cinemas_list.xml
+++ b/app/src/main/res/layout/view_holder_movies_cinema_cinemas_list.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    android:paddingStart="@dimen/margin_large"
-    android:paddingTop="@dimen/margin_15dp"
-    android:paddingEnd="@dimen/margin_large">
+    android:background="@color/colorPrimary">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvCinemaNameMoviesCinema"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_large"
+        android:layout_marginTop="@dimen/margin_15dp"
+        android:layout_marginEnd="@dimen/margin_large"
         android:layout_alignParentStart="true"
         android:text="JCGV : Junction City"
         android:textAppearance="@style/TextInterWhiteSemiBold16sp" />
@@ -20,6 +21,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="@dimen/margin_large"
+        android:layout_marginTop="@dimen/margin_15dp"
+        android:layout_marginEnd="@dimen/margin_large"
         android:fontFamily="@font/inter_medium"
         android:text="@string/lbl_see_details"
         android:textColor="@color/colorAccent"
@@ -29,9 +33,11 @@
         android:id="@+id/llCinemaStuffs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_large"
+        android:layout_marginEnd="@dimen/margin_large"
         android:layout_below="@+id/tvCinemaNameMoviesCinema"
-        android:layout_marginBottom="@dimen/margin_10dp"
         android:layout_marginTop="@dimen/margin_21dp"
+        android:layout_marginBottom="@dimen/margin_10dp"
         android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatImageView
@@ -87,17 +93,20 @@
         android:id="@+id/rvCinemaTimesMoviesCinema"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/margin_10dp"
         android:layout_below="@+id/llCinemaStuffs"
-        android:layout_centerHorizontal="true"
-        android:paddingBottom="@dimen/margin_25dp"
-        android:visibility="gone" />
+        android:padding="@dimen/margin_10dp"
+        android:visibility="gone"
+        tools:itemCount="4"
+        tools:listitem="@layout/view_holder_movies_cinema_cinema_times_list" />
 
     <LinearLayout
         android:id="@+id/llLongPressMoviesCinema"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rvCinemaTimesMoviesCinema"
+        android:layout_marginStart="@dimen/margin_large"
+        android:layout_marginTop="@dimen/margin_15dp"
+        android:layout_marginEnd="@dimen/margin_large"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingBottom="@dimen/margin_30dp"
