--- a/app/src/main/res/layout/view_holder_movies_home_banner_list.xml
+++ b/app/src/main/res/layout/view_holder_movies_home_banner_list.xml
@@ -5,16 +5,29 @@
     android:background="@color/colorPrimary"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivBannerImage"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/flBannerHome"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@drawable/kfc_banner"
-        android:scaleType="centerCrop"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        app:cardCornerRadius="@dimen/margin_medium">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivBannerImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/kfc_banner"
+            android:scaleType="centerCrop"/>
+
+    </com.google.android.material.card.MaterialCardView>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:elevation="@dimen/margin_small"
         android:background="@drawable/banner_background"/>
 
 </RelativeLayout>
