--- a/app/src/main/res/drawable/banner_background.xml
+++ b/app/src/main/res/drawable/banner_background.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="@dimen/margin_medium"/>
     <gradient
-        android:startColor="@android:color/transparent"
-        android:endColor="@color/colorPrimary"
-        android:angle="180"
-        android:centerColor="@color/colorPrimaryLight"
-        android:centerX="1"/>
+        android:startColor="#D6000001"
+        android:endColor="@android:color/transparent"
+        android:centerColor="@android:color/transparent"
+        android:angle="0"
+        android:centerX="0.3"/>
 </shape>
