--- a/app/src/main/res/layout/fragment_movies_ticket_checkout.xml
+++ b/app/src/main/res/layout/fragment_movies_ticket_checkout.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragmentMoviesCheckout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
@@ -420,7 +421,7 @@
                 android:layout_below="@+id/rlConvenienceFeeMoviesTicketCheckout"
                 android:layout_marginTop="@dimen/margin_medium_3"
                 android:paddingStart="@dimen/margin_large"
-                app:srcCompat="@drawable/ticket_cancelation_button" />
+                app:srcCompat="@drawable/ticket_cancellation_button_policy" />
 
             <View
                 android:id="@+id/vHorizontalLineTwoMoviesTicketCheckout"
@@ -482,7 +483,7 @@
             android:layout_below="@+id/rlCheckoutDetailsMoviesTicketCheckout"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="@dimen/margin_28dp"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_marginTop="@dimen/margin_36dp"
             android:layout_marginEnd="@dimen/margin_28dp"
             android:paddingBottom="@dimen/margin_50dp"
@@ -518,7 +519,7 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/btnCancelButtonMoviesCancel"
-                android:layout_width="@dimen/width_buy_button"
+                android:layout_width="200dp"
                 android:layout_height="@dimen/height_buy_button"
                 android:layout_alignParentEnd="true"
                 app:srcCompat="@drawable/button_cancel_booking" />
