--- a/app/src/main/res/layout/view_holder_movies_cinema_cinema_times_list.xml
+++ b/app/src/main/res/layout/view_holder_movies_cinema_cinema_times_list.xml
@@ -1,46 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/itemCinemaTimes"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_10dp"
-    android:background="@drawable/movies_show_times_background"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:paddingStart="@dimen/margin_15dp"
-    android:paddingEnd="@dimen/margin_15dp"
-    android:paddingTop="@dimen/margin_medium"
-    android:paddingBottom="@dimen/margin_medium">
+    android:paddingStart="@dimen/margin_medium_3_n"
+    android:paddingEnd="@dimen/margin_medium_3_n"
+    android:paddingTop="@dimen/margin_10dp"
+    android:paddingBottom="@dimen/margin_10dp"
+    android:background="@color/colorPrimary"
+    android:orientation="vertical">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/itemCinemaTimes"
+        android:layout_width="@dimen/margin_95dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="6:30 AM"
-        android:textAppearance="@style/TextInterWhiteSemiBold14sp" />
+        android:gravity="center_horizontal"
+        android:background="@drawable/movies_show_times_background"
+        android:orientation="vertical">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_5dp"
-        android:gravity="center"
-        android:text="3D DBOX"
-        android:textAppearance="@style/TextInterWhiteSemiBold14sp" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:text="6:30 AM"
+            android:textAppearance="@style/TextInterWhiteSemiBold14sp" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_5dp"
-        android:gravity="center"
-        android:text="Screen 2"
-        android:textAppearance="@style/TextInterWhiteSemiBold14sp" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_5dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:text="3D DBOX"
+            android:textColor="@color/white"
+            android:fontFamily="@font/inter_semibold"
+            android:textSize="12sp"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_5dp"
-        android:gravity="center"
-        android:text="21 Available"
-        android:textAppearance="@style/TextInterWhiteSemiBold14sp" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_5dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:text="Screen 2"
+            android:textColor="@color/white"
+            android:fontFamily="@font/inter_semibold"
+            android:textSize="12sp" />
 
-</LinearLayout>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_5dp"
+            android:layout_marginBottom="@dimen/margin_medium"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:text="21 Available"
+            android:textColor="@color/white"
+            android:fontFamily="@font/inter_semibold"
+            android:textSize="12sp" />
+
+    </LinearLayout>
+
+
+</FrameLayout>
