--- a/app/src/main/res/layout/view_holder_movies_cinema_cinemas_list.xml
+++ b/app/src/main/res/layout/view_holder_movies_cinema_cinemas_list.xml
@@ -18,6 +18,7 @@
         android:textAppearance="@style/TextInterWhiteSemiBold16sp" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvSeeDetailsMoviesCinema"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -92,11 +93,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCinemaTimesMoviesCinema"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/llCinemaStuffs"
-        android:padding="@dimen/margin_10dp"
-        android:visibility="gone"
-        tools:itemCount="4"
+        android:visibility="visible"
+        android:layout_marginTop="@dimen/margin_10dp"
+        tools:itemCount="3"
         tools:listitem="@layout/view_holder_movies_cinema_cinema_times_list" />
 
     <LinearLayout
